@@ -1,7 +1,7 @@
 from distutils.core import setup
 setup(
     name='dynamic_table',
-    version='0.8.4',
+    version='0.8.5',
     description='Library for creating and printing tables in different formats',
     author='Dan Farnsworth',
     author_email='absltkaos@gmail.com',
