@@ -1,3 +1,9 @@
+python-dynamic-table (0.8.5-%DIST%1) %DIST%; urgency=low
+
+  * Feature: Support a not contains operator for TableFilters '!/'
+
+ -- Dan Farnsworth <absltkaos@gmail.com>  Wed, 19 Nov 2014 18:00:00 -0700
+
 python-dynamic-table (0.8.4-%DIST%1) %DIST%; urgency=low
 
   * Bug Fix: RenderHTML threw error when rendered without header set
